[platform] minor optimization of "plugin updates installed" notification
(passing a project into the listener instead of complex context lookup)

GitOrigin-RevId: 159d2e808decf640c9a30ef4e232f254300399d8